--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link rel="icon" href="img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
     crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400,500" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
@@ -35,21 +37,21 @@
     <div class="grid-hero">
       <div>
         <div class="sub-title">Próximo Meetup</div>
-        <h2 class="meetup-date">09 fev</h2>
+        <h2 class="meetup-date">24 fev</h2>
         <p class="meetup-description">
           Olá pessoal! Tudo beleza? Temos mais um meetup na área! Esperamos que todos vocês gostem e ajudem a nossa
           comunidade ser mais forte! :D</br></br>
 
-          Local: <a href="https://goo.gl/maps/W2HMHw6zSYx" class="description-link" target="_blank">Museu Parque do Saber</a></br>
-          Horário: 8:00 - 12:00</br></br>
+          Local: <a href="https://goo.gl/maps/hBrJi7kCxJN2" class="description-link" target="_blank">Club4Work Coworking</a></br>
+          Horário: 9:00 - 11:30</br></br>
         </p>
         <a href="http://meetu.ps/e/GnhNg/rHldY/f" class="btn-primary" target="_blank">Inscreva-se</a>
-        <a href="https://github.com/devfsa/meetups/issues/7" class="btn-secondary" target="_blank">Submeter palestra</a>
+        <a href="https://github.com/devfsa/meetups/issues/9" class="btn-secondary" target="_blank">Submeter palestra</a>
       </div>
       <div>
         <div class="space-between">
           <div class="sub-title">Palestras mais votadas</div>
-          <a href="https://github.com/devfsa/meetups/issues/7" class="sub-title-link" target="_blank">Ver todas</a>
+          <a href="https://github.com/devfsa/meetups/issues/9" class="sub-title-link" target="_blank">Ver todas</a>
         </div>
         <div class="keynote-container">
 
@@ -88,6 +90,14 @@
       <a href="https://paggue.io" target="_blank">
         <img src="img/paggue-logo.png" alt="Paggue">
       </a>
+    </div>
+  </section>
+  <section class="section gray">
+    <div class="youtube-gallery">
+      <div>your content 1</div>
+      <div>your content 2</div>
+      <div>your content 3</div>
+      <div>your content 4</div>
     </div>
   </section>
   <section class="section">
@@ -164,105 +174,31 @@
           voluntários.</a></p>
     </div>
   </footer>
+
+  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
+  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
+  <script>
+    $(document).ready(function(){
+      $('.youtube-gallery').slick({
+        infinite: true,
+        slidesToShow: 4,
+        slidesToScroll: 4
+      });
+    });
+  </script>
+  <script>
+    fetch('https://www.googleapis.com/youtube/v3/search?key=AIzaSyCaMCzli7qY23GVcwG_XUiEbdHMQxZL5jA&channelId=UC1E4DKVVg1Fnpjidi4XQfaw&part=snippet,id&order=date')
+    .then((response) => {
+      response.json().then((data) => {
+        console.log(data);
+      });
+    })
+    .catch(function (err) {
+      console.log('Fetch Error:', err);
+    });
+  </script>
+
 </body>
-<script>
-  fetch('https://api.github.com/repos/devfsa/vagas/issues')
-    .then((response) => {
-      response.json().then((data) => {
-        let jobs = data.map(d => {
-          const splitTag = /\s+(?:n[ao]|at)\s+/i;
-          let tags = d.title.split(splitTag)[0].split('] ')
-          let body = splitTag.test(d.title) ? d.title.split(splitTag)[1] + ' - ' : ''
-          let title = tags[tags.length - 1]
-          let city = tags[0].replace('[', '')
-          let labels = d.labels.reduce((l, c) => l + ' - ' + c.name, '')
-          return {
-            url: d.html_url,
-            body,
-            title,
-            labels: d.labels,
-            city,
-            description: body + city + labels
-          };
-        })
-        let jobsElement = document.getElementById("jobs");
-        const jobsHTML = jobs.slice(0, 4).reduce((html, job) => {
-          const { title, url, description } = job
-          return [
-            html,
-            '<a href="', url, '" class="card-item" target="_blank">',
-            '<p class="card-item-title">', title, '</p>',
-            '<p class="card-item-description">', description, '</p>',
-            '</a>',
-          ].join('');
-        }, '');
-        jobsElement.insertAdjacentHTML('beforeend', jobsHTML);
-      });
-    })
-    .catch(function (err) {
-      console.log('Fetch Error:', err);
-    });
-</script>
-<script>
-  fetch('https://api.github.com/repos/devfsa/meetups/issues/7/comments', { headers: { "Accept": "text" } })
-    .then((response) => {
-      response.json().then((data) => {
-        const reactionsFetchHeader = { "Accept": "application/vnd.github.squirrel-girl-preview+json" }
-        // will wait all fetch from comments' reactions
-        Promise.all(
-          data.map(d => {
-            const keynote = {
-              url: d.url,
-              html_url: d.html_url,
-              user: d.user,
-              body: d.body,
-              title: d.body.split('\r\n')[0].replace(/\*\*/g, '')
-            };
-            // will transform array of data into array of promises that returns data
-            return fetch(`${keynote.url}/reactions`, { headers: reactionsFetchHeader })
-              .then(res => res.json())
-              .then(reactions => Object.assign({}, keynote, { reactions: reactions || [] }))
-              .catch(err => {
-                console.log(`Error fetching reactions of ${keynote.title} // ${keynote.url}`)
-                console.error(err);
-                return Object.assign({}, keynote, { reactions: [] });
-              })
-          })
-        ).then(keynotes => {
-          // after fetching all comments' reactions, sort it and then slice it
-          let notes = keynotes
-            .sort((k1, k2) => k2.reactions.length - k1.reactions.length)
-            .slice(0, 4)
-          let html = '';
-          let keynotesElement = document.getElementById("keynotes");
-          const keynotesHTML = notes.reduce((html, keynote, i) => {
-            const { user, html_url, body, title, reactions } = keynote
-            return [
-              html,
-              '<div class="card keynote-card">',
-              '<div class="keynote-image">',
-              '<img src="', user.avatar_url, '" class="keynote-photo" />',
-              '</div>',
-              '<div class="keynote-desc">',
-              '<a href="', html_url, '" class="keynote-title" target="_blank">', title, '</a>',
-              '<div class="keynote-info">',
-              '<p class="keynote-author">@', user.login, '</p>',
-              '<a href="', html_url, '" class="keynote-vote ', i === 0 ? 'voted' : '', '" target="_blank">',
-              '<i class="far fa-arrow-alt-circle-up"></i>',
-              '<span class="keynote-vote-number">', reactions.length, '</span>',
-              '</a>',
-              '</div>',
-              '</div>',
-              '</div>',
-            ].join('');
-          }, '');
-          keynotesElement.insertAdjacentHTML('beforeend', keynotesHTML);
-        });
-      });
-    })
-    .catch(function (err) {
-      console.log('Fetch Error:', err);
-    });
-</script>
 
 </html>
