--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   <link rel="icon" href="img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
-    crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+  crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400,500" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
@@ -40,165 +38,138 @@
         <h2 class="meetup-date">24 fev</h2>
         <p class="meetup-description">
           Olá pessoal! Tudo beleza? Temos mais um meetup na área! Esperamos que todos vocês gostem e ajudem a nossa
-          comunidade ser mais forte! :D</br></br>
+        comunidade ser mais forte! :D</br></br>
 
-          Local: <a href="https://goo.gl/maps/hBrJi7kCxJN2" class="description-link" target="_blank">Club4Work Coworking</a></br>
-          Horário: 9:00 - 11:30</br></br>
-        </p>
-        <a href="http://meetu.ps/e/GnhNg/rHldY/f" class="btn-primary" target="_blank">Inscreva-se</a>
-        <a href="https://github.com/devfsa/meetups/issues/9" class="btn-secondary" target="_blank">Submeter palestra</a>
+        Local: <a href="https://goo.gl/maps/hBrJi7kCxJN2" class="description-link" target="_blank">Club4Work Coworking</a></br>
+      Horário: 9:00 - 11:30</br></br>
+    </p>
+    <a href="http://meetu.ps/e/GnhNg/rHldY/f" class="btn-primary" target="_blank">Inscreva-se</a>
+    <a href="https://github.com/devfsa/meetups/issues/9" class="btn-secondary" target="_blank">Submeter palestra</a>
+  </div>
+  <div>
+    <div class="space-between">
+      <div class="sub-title">Palestras mais votadas</div>
+      <a href="https://github.com/devfsa/meetups/issues/9" class="sub-title-link" target="_blank">Ver todas</a>
+    </div>
+    <div class="keynote-container">
+
+      <div class="grid-2" id="keynotes"></div>
+
+    </div>
+  </div>
+</div>
+</main>
+<section class="support">
+  <div class="container">
+    <p>Apoio:</p>
+    <a href="https://absam.io" target="_blank">
+      <img src="img/absam-logo.png" alt="Absam">
+    </a>
+    <a href="https://admobilize.com" target="_blank">
+      <img src="img/admobilize-logo.png" alt="AdMobilize">
+    </a>
+    <a href="http://binarii.com.br" target="_blank">
+      <img src="img/binarii-logo.png" alt="Binarii">
+    </a>
+    <a href="https://club4work.com.br/" target="_blank">
+      <img src="img/club4work-logo.png" alt="Club4Work">
+    </a>
+  </div>
+  <div class="container">
+    <a href="https://gerenciagram.com.br" target="_blank">
+      <img src="img/gerenciagram-logo.png" alt="Gerenciagram">
+    </a>
+    <a href="https://hostoo.io" target="_blank">
+      <img src="img/hostoo-logo.png" alt="Hostoo">
+    </a>
+    <a href="https://huggy.io" target="_blank">
+      <img src="img/huggy-logo.png" alt="Huggy">
+    </a>
+    <a href="https://paggue.io" target="_blank">
+      <img src="img/paggue-logo.png" alt="Paggue">
+    </a>
+  </div>
+</section>
+<section class="section gray">
+  <div id="youtube-videos"></div>
+</section>
+<section class="section">
+  <div class="container">
+    <div class="grid-3">
+      <div>
+        <div class="space-between">
+          <div class="sub-title">Vagas DEVFSA</div>
+          <a href="https://github.com/devfsa/vagas/issues" class="sub-title-link" target="_blank">Ver mais</a>
+        </div>
+        <div class="card" id="jobs">
+        </div>
       </div>
       <div>
         <div class="space-between">
-          <div class="sub-title">Palestras mais votadas</div>
-          <a href="https://github.com/devfsa/meetups/issues/9" class="sub-title-link" target="_blank">Ver todas</a>
+          <div class="sub-title">VAGAS REMOTO.CC</div>
+          <a href="http://remoto.cc" class="sub-title-link" target="_blank">Ver mais</a>
         </div>
-        <div class="keynote-container">
+        <div class="card">
+          <a href="https://stackoverflow.com/jobs/208566/technical-business-analyst-ixstrata-inc?so=p&pg=1&offset=-1&l=Remote&u=Km&d=20"
+          class="card-item" target="_blank">
+          <p class="card-item-title">Technical Business Analyst</p>
+          <p class="card-item-description">ixStrata, Inc. - Remote - Full-Time</p>
+        </a>
+        <a href="https://stackoverflow.com/jobs/208661/scrum-master-xapo?so=p&pg=1&offset=0&l=Remote&u=Km&d=20"
+        class="card-item" target="_blank">
+        <p class="card-item-title">Scrum Master</p>
+        <p class="card-item-description">Xapo - Remote - Full-Time</p>
+      </a>
+      <a href="https://stackoverflow.com/jobs/203005/quality-engineer-hazelcast?so=p&pg=1&offset=18&l=Remote&u=Km&d=20"
+      class="card-item" target="_blank">
+      <p class="card-item-title">Quality Engineer</p>
+      <p class="card-item-description">Hazelcast - Remote - Full-Time</p>
+    </a>
+    <a href="https://stackoverflow.com/jobs/208576/senior-java-back-end-developer-wallethub?so=p&pg=1&offset=6&l=Remote&u=Km&d=20"
+    class="card-item" target="_blank">
+    <p class="card-item-title">Senior Java Back-End Developer</p>
+    <p class="card-item-description">Wallethub - Remote - Full-Time</p>
+  </a>
+</div>
+</div>
+<div>
+  <div class="space-between">
+    <div class="sub-title">PRÓXIMOS EVENTOS NO BRASIL</div>
+    <a href="https://github.com/devfsa/eventos" class="sub-title-link" target="_blank">Ver mais</a>
+  </div>
+  <div class="card">
+    <a href="https://gdgfsa.github.io/devfest2018/" class="card-item" target="_blank">
+      <p class="card-item-title">DevFest Feira de Santana</p>
+      <p class="card-item-description">08 Dezembro - Feira de Santana - Bahia</p>
+    </a>
+    <a href="https://devopsdaysfsa.eventize.com.br/index.php?pagina=1" class="card-item" target="_blank">
+      <p class="card-item-title">DevOpsDaysFSA</p>
+      <p class="card-item-description">15 Dezembro - Feira de Santana - Bahia</p>
+    </a>
+    <a href="https://gdgfsa.github.io/devfest2018/" class="card-item" target="_blank">
+      <p class="card-item-title">DevFest Feira de Santana</p>
+      <p class="card-item-description">08 Dezembro - Feira de Santana - Bahia</p>
+    </a>
+    <a href="https://devopsdaysfsa.eventize.com.br/index.php?pagina=1" class="card-item" target="_blank">
+      <p class="card-item-title">DevOpsDaysFSA</p>
+      <p class="card-item-description">15 Dezembro - Feira de Santana - Bahia</p>
+    </a>
+  </div>
+</div>
+</div>
+</div>
+</section>
 
-          <div class="grid-2" id="keynotes"></div>
+<footer>
+  <div class="container">
+    <img src="img/devfsa-logo-gray.svg" alt="DevFSA">
+    <p>Criado com &lt;3 em Feira de Santana. Mantido por <a href="https://github.com/devfsa" target="_blank">contribuidores
+    voluntários.</a></p>
+  </div>
+</footer>
 
-        </div>
-      </div>
-    </div>
-  </main>
-  <section class="support">
-    <div class="container">
-      <p>Apoio:</p>
-      <a href="https://absam.io" target="_blank">
-        <img src="img/absam-logo.png" alt="Absam">
-      </a>
-      <a href="https://admobilize.com" target="_blank">
-        <img src="img/admobilize-logo.png" alt="AdMobilize">
-      </a>
-      <a href="http://binarii.com.br" target="_blank">
-        <img src="img/binarii-logo.png" alt="Binarii">
-      </a>
-      <a href="https://club4work.com.br/" target="_blank">
-        <img src="img/club4work-logo.png" alt="Club4Work">
-      </a>
-    </div>
-    <div class="container">
-      <a href="https://gerenciagram.com.br" target="_blank">
-        <img src="img/gerenciagram-logo.png" alt="Gerenciagram">
-      </a>
-      <a href="https://hostoo.io" target="_blank">
-        <img src="img/hostoo-logo.png" alt="Hostoo">
-      </a>
-      <a href="https://huggy.io" target="_blank">
-        <img src="img/huggy-logo.png" alt="Huggy">
-      </a>
-      <a href="https://paggue.io" target="_blank">
-        <img src="img/paggue-logo.png" alt="Paggue">
-      </a>
-    </div>
-  </section>
-  <section class="section gray">
-    <div class="youtube-gallery">
-      <div>your content 1</div>
-      <div>your content 2</div>
-      <div>your content 3</div>
-      <div>your content 4</div>
-    </div>
-  </section>
-  <section class="section">
-    <div class="container">
-      <div class="grid-3">
-        <div>
-          <div class="space-between">
-            <div class="sub-title">Vagas DEVFSA</div>
-            <a href="https://github.com/devfsa/vagas/issues" class="sub-title-link" target="_blank">Ver mais</a>
-          </div>
-          <div class="card" id="jobs">
-          </div>
-        </div>
-        <div>
-          <div class="space-between">
-            <div class="sub-title">VAGAS REMOTO.CC</div>
-            <a href="http://remoto.cc" class="sub-title-link" target="_blank">Ver mais</a>
-          </div>
-          <div class="card">
-            <a href="https://stackoverflow.com/jobs/208566/technical-business-analyst-ixstrata-inc?so=p&pg=1&offset=-1&l=Remote&u=Km&d=20"
-              class="card-item" target="_blank">
-              <p class="card-item-title">Technical Business Analyst</p>
-              <p class="card-item-description">ixStrata, Inc. - Remote - Full-Time</p>
-            </a>
-            <a href="https://stackoverflow.com/jobs/208661/scrum-master-xapo?so=p&pg=1&offset=0&l=Remote&u=Km&d=20"
-              class="card-item" target="_blank">
-              <p class="card-item-title">Scrum Master</p>
-              <p class="card-item-description">Xapo - Remote - Full-Time</p>
-            </a>
-            <a href="https://stackoverflow.com/jobs/203005/quality-engineer-hazelcast?so=p&pg=1&offset=18&l=Remote&u=Km&d=20"
-              class="card-item" target="_blank">
-              <p class="card-item-title">Quality Engineer</p>
-              <p class="card-item-description">Hazelcast - Remote - Full-Time</p>
-            </a>
-            <a href="https://stackoverflow.com/jobs/208576/senior-java-back-end-developer-wallethub?so=p&pg=1&offset=6&l=Remote&u=Km&d=20"
-              class="card-item" target="_blank">
-              <p class="card-item-title">Senior Java Back-End Developer</p>
-              <p class="card-item-description">Wallethub - Remote - Full-Time</p>
-            </a>
-          </div>
-        </div>
-        <div>
-          <div class="space-between">
-            <div class="sub-title">PRÓXIMOS EVENTOS NO BRASIL</div>
-            <a href="https://github.com/devfsa/eventos" class="sub-title-link" target="_blank">Ver mais</a>
-          </div>
-          <div class="card">
-            <a href="https://gdgfsa.github.io/devfest2018/" class="card-item" target="_blank">
-              <p class="card-item-title">DevFest Feira de Santana</p>
-              <p class="card-item-description">08 Dezembro - Feira de Santana - Bahia</p>
-            </a>
-            <a href="https://devopsdaysfsa.eventize.com.br/index.php?pagina=1" class="card-item" target="_blank">
-              <p class="card-item-title">DevOpsDaysFSA</p>
-              <p class="card-item-description">15 Dezembro - Feira de Santana - Bahia</p>
-            </a>
-            <a href="https://gdgfsa.github.io/devfest2018/" class="card-item" target="_blank">
-              <p class="card-item-title">DevFest Feira de Santana</p>
-              <p class="card-item-description">08 Dezembro - Feira de Santana - Bahia</p>
-            </a>
-            <a href="https://devopsdaysfsa.eventize.com.br/index.php?pagina=1" class="card-item" target="_blank">
-              <p class="card-item-title">DevOpsDaysFSA</p>
-              <p class="card-item-description">15 Dezembro - Feira de Santana - Bahia</p>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <footer>
-    <div class="container">
-      <img src="img/devfsa-logo-gray.svg" alt="DevFSA">
-      <p>Criado com &lt;3 em Feira de Santana. Mantido por <a href="https://github.com/devfsa" target="_blank">contribuidores
-          voluntários.</a></p>
-    </div>
-  </footer>
-
-  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
-  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-  <script type="text/javascript" src="js/main.js"></script>
-  <script>
-    $(document).ready(function(){
-      $('.youtube-gallery').slick({
-        infinite: true,
-        slidesToShow: 4,
-        slidesToScroll: 4
-      });
-    });
-  </script>
-  <script>
-    fetch('https://www.googleapis.com/youtube/v3/search?key=AIzaSyCaMCzli7qY23GVcwG_XUiEbdHMQxZL5jA&channelId=UC1E4DKVVg1Fnpjidi4XQfaw&part=snippet,id&order=date')
-    .then((response) => {
-      response.json().then((data) => {
-        console.log(data);
-      });
-    })
-    .catch(function (err) {
-      console.log('Fetch Error:', err);
-    });
-  </script>
-
+<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/youtube.js"></script>
 </body>
 
 </html>
