--- a/index.html
+++ b/index.html
@@ -70,33 +70,49 @@
 
 <section class="support">
   <div class="container">
-    <p>Apoio:</p>
-    <a href="https://absam.io" target="_blank">
-      <img src="img/absam-logo.png" alt="Absam">
-    </a>
-    <a href="https://admobilize.com" target="_blank">
-      <img src="img/admobilize-logo.png" alt="AdMobilize">
-    </a>
-    <a href="http://binarii.com.br" target="_blank">
-      <img src="img/binarii-logo.png" alt="Binarii">
-    </a>
-    <a href="https://club4work.com.br/" target="_blank">
-      <img src="img/club4work-logo.png" alt="Club4Work">
-    </a>
-  </div>
-  <div class="container">
-    <a href="https://gerenciagram.com.br" target="_blank">
-      <img src="img/gerenciagram-logo.png" alt="Gerenciagram">
-    </a>
-    <a href="https://hostoo.io" target="_blank">
-      <img src="img/hostoo-logo.png" alt="Hostoo">
-    </a>
-    <a href="https://huggy.io" target="_blank">
-      <img src="img/huggy-logo.png" alt="Huggy">
-    </a>
-    <a href="https://paggue.io" target="_blank">
-      <img src="img/paggue-logo.png" alt="Paggue">
-    </a>
+    <div class="sub-title">Apoio:</div>
+    <div class="partners">
+      <div class="image-container">
+        <a href="https://absam.io" target="_blank">
+          <img src="img/logos/absam.png" alt="Absam">
+        </a>
+      </div>
+      <div class="image-container">
+        <a href="https://admobilize.com" target="_blank">
+          <img src="img/logos/admobilize.png" alt="AdMobilize">
+        </a>
+      </div>
+      <div class="image-container">
+        <a href="http://binarii.com.br" target="_blank">
+          <img src="img/logos/binarii.png" alt="Binarii">
+        </a>
+      </div>
+      <div class="image-container">
+        <a href="https://club4work.com.br/" target="_blank">
+          <img src="img/logos/club4work.png" alt="Club4Work">
+        </a>
+      </div>
+      <div class="image-container">
+        <a href="https://gerenciagram.com.br" target="_blank">
+          <img src="img/logos/gerenciagram.png" alt="Gerenciagram">
+        </a>
+      </div>
+      <div class="image-container">
+        <a href="https://hostoo.io" target="_blank">
+          <img src="img/logos/hostoo.png" alt="Hostoo">
+        </a>
+      </div>
+      <div class="image-container">
+        <a href="https://huggy.io" target="_blank">
+          <img src="img/logos/huggy.png" alt="Huggy">
+        </a>
+      </div>
+      <div class="image-container">
+        <a href="https://paggue.io" target="_blank">
+          <img src="img/logos/paggue.png" alt="Paggue">
+        </a>
+      </div>
+    </div>
   </div>
 </section>
 
