--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="grid-hero">
       <div>
         <div class="sub-title">Próximo Meetup</div>
-        <h2 class="meetup-date">13 Abr</h2>
+        <h2 class="meetup-date">11 Mai</h2>
         <p class="meetup-description">
           Olá pessoal! Tudo beleza? Temos mais um meetup na área! Esperamos que todos vocês gostem e ajudem a nossa
         comunidade ser mais forte! :D</br></br>
@@ -52,14 +52,14 @@
       Horário: 9:00 - 11:30</br></br>
     </p>
     <div class="controls">
-      <a href="http://meetu.ps/e/GCLDH/rHldY/f" class="btn-primary" target="_blank">Inscreva-se</a>
-      <a href="https://github.com/devfsa/meetups/issues/10" class="btn-secondary" target="_blank">Submeter palestra</a>
+      <a href="http://meetu.ps/e/GK7Td/rHldY/f" class="btn-primary" target="_blank">Inscreva-se</a>
+      <a href="https://github.com/devfsa/meetups/issues/12" class="btn-secondary" target="_blank">Submeter palestra</a>
     </div>
   </div>
   <div>
     <div class="space-between">
       <div class="sub-title">Palestras mais votadas</div>
-      <a href="https://github.com/devfsa/meetups/issues/10" class="sub-title-link" target="_blank">Ver todas</a>
+      <a href="https://github.com/devfsa/meetups/issues/12" class="sub-title-link" target="_blank">Ver todas</a>
     </div>
     <div class="keynote-container">
       <div class="grid-2" id="keynotes"></div>
