--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
     </p>
     <div class="controls">
       <a href="http://meetu.ps/e/GNgwp/rHldY/f" class="btn-primary" target="_blank">Inscreva-se</a>
-      <a href="https://github.com/devfsa/meetups/issues/13" class="btn-secondary" target="_blank">Submeter palestra</a>
+      <a href="https://github.com/devfsa/meetups/issues/13" id="submission" class="btn-secondary" target="_blank">Submeter palestra</a>
     </div>
   </div>
   <div>
     <div class="space-between">
       <div class="sub-title">Palestras mais votadas</div>
-      <a href="https://github.com/devfsa/meetups/issues/13" class="sub-title-link" target="_blank">Ver todas</a>
+      <a href="https://github.com/devfsa/meetups/issues/13" id="seeall" class="sub-title-link" target="_blank">Ver todas</a>
     </div>
     <div class="keynote-container">
       <div class="grid-2" id="keynotes"></div>
